clusters/talos-robbinsdale/apps/monitoring/kube-prometheus-stack/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private # Assuming internal access only for now
      namespace: envoy-gateway-system
  hostnames:
    - "alertmanager.rajsingh.info"
    - "alertmanager.lukehouge.com"
    # Add other hostnames if needed, e.g., alertmanager.lukehouge.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093 # The http-web port from the service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
