clusters/talos-robbinsdale/apps/monitoring/kube-prometheus-stack/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private # Assuming internal access only
      namespace: envoy-gateway-system
  hostnames:
    - "prometheus.rajsingh.info"
    - "prometheus.lukehouge.com"
    # Add other hostnames if needed, e.g., prometheus.lukehouge.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090 # The http-web port from the service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
